--- a/notebooks/base_class_test.ipynb
+++ b/notebooks/base_class_test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +27,12 @@
     "from io import FileIO, BytesIO, StringIO\n",
     "\n",
     "sys.path.append('..')\n",
-    "from src.models.supervised.regression.crosssection.linear_models.OLS import OLS"
+    "from src.models.supervised.regression.crosssection.linear_models.OLS import OLS, OLSVisualizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,70 +41,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_de6ef_row0_col0, #T_de6ef_row1_col1, #T_de6ef_row2_col2 {\n",
+       "#T_3676e_row0_col0, #T_3676e_row1_col1, #T_3676e_row2_col2 {\n",
        "  background-color: #b40426;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_de6ef_row0_col1, #T_de6ef_row0_col2, #T_de6ef_row1_col0 {\n",
+       "#T_3676e_row0_col1, #T_3676e_row0_col2, #T_3676e_row1_col0 {\n",
        "  background-color: #3b4cc0;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_de6ef_row1_col2 {\n",
-       "  background-color: #8fb1fe;\n",
+       "#T_3676e_row1_col2 {\n",
+       "  background-color: #cfdaea;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_de6ef_row2_col0 {\n",
-       "  background-color: #cbd8ee;\n",
+       "#T_3676e_row2_col0 {\n",
+       "  background-color: #adc9fd;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_de6ef_row2_col1 {\n",
-       "  background-color: #efcfbf;\n",
+       "#T_3676e_row2_col1 {\n",
+       "  background-color: #f5c0a7;\n",
        "  color: #000000;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_de6ef\">\n",
+       "<table id=\"T_3676e\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_de6ef_level0_col0\" class=\"col_heading level0 col0\" >X1</th>\n",
-       "      <th id=\"T_de6ef_level0_col1\" class=\"col_heading level0 col1\" >X2</th>\n",
-       "      <th id=\"T_de6ef_level0_col2\" class=\"col_heading level0 col2\" >y</th>\n",
+       "      <th id=\"T_3676e_level0_col0\" class=\"col_heading level0 col0\" >X1</th>\n",
+       "      <th id=\"T_3676e_level0_col1\" class=\"col_heading level0 col1\" >X2</th>\n",
+       "      <th id=\"T_3676e_level0_col2\" class=\"col_heading level0 col2\" >y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_de6ef_level0_row0\" class=\"row_heading level0 row0\" >X1</th>\n",
-       "      <td id=\"T_de6ef_row0_col0\" class=\"data row0 col0\" >1.000000</td>\n",
-       "      <td id=\"T_de6ef_row0_col1\" class=\"data row0 col1\" >0.227342</td>\n",
-       "      <td id=\"T_de6ef_row0_col2\" class=\"data row0 col2\" >0.565312</td>\n",
+       "      <th id=\"T_3676e_level0_row0\" class=\"row_heading level0 row0\" >X1</th>\n",
+       "      <td id=\"T_3676e_row0_col0\" class=\"data row0 col0\" >1.000000</td>\n",
+       "      <td id=\"T_3676e_row0_col1\" class=\"data row0 col1\" >0.336466</td>\n",
+       "      <td id=\"T_3676e_row0_col2\" class=\"data row0 col2\" >0.563385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_de6ef_level0_row1\" class=\"row_heading level0 row1\" >X2</th>\n",
-       "      <td id=\"T_de6ef_row1_col0\" class=\"data row1 col0\" >0.227342</td>\n",
-       "      <td id=\"T_de6ef_row1_col1\" class=\"data row1 col1\" >1.000000</td>\n",
-       "      <td id=\"T_de6ef_row1_col2\" class=\"data row1 col2\" >0.676830</td>\n",
+       "      <th id=\"T_3676e_level0_row1\" class=\"row_heading level0 row1\" >X2</th>\n",
+       "      <td id=\"T_3676e_row1_col0\" class=\"data row1 col0\" >0.336466</td>\n",
+       "      <td id=\"T_3676e_row1_col1\" class=\"data row1 col1\" >1.000000</td>\n",
+       "      <td id=\"T_3676e_row1_col2\" class=\"data row1 col2\" >0.759598</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_de6ef_level0_row2\" class=\"row_heading level0 row2\" >y</th>\n",
-       "      <td id=\"T_de6ef_row2_col0\" class=\"data row2 col0\" >0.565312</td>\n",
-       "      <td id=\"T_de6ef_row2_col1\" class=\"data row2 col1\" >0.676830</td>\n",
-       "      <td id=\"T_de6ef_row2_col2\" class=\"data row2 col2\" >1.000000</td>\n",
+       "      <th id=\"T_3676e_level0_row2\" class=\"row_heading level0 row2\" >y</th>\n",
+       "      <td id=\"T_3676e_row2_col0\" class=\"data row2 col0\" >0.563385</td>\n",
+       "      <td id=\"T_3676e_row2_col1\" class=\"data row2 col1\" >0.759598</td>\n",
+       "      <td id=\"T_3676e_row2_col2\" class=\"data row2 col2\" >1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x714645a359d0>"
+       "<pandas.io.formats.style.Styler at 0x74eccc6efb10>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,11 +126,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "sm_model = sm.OLS(y, sm.add_constant(X)).fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['float64'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(df.dtypes, columns=[\"dtype\"])['dtype'].astype(str).unique()\n"
    ]
   },
   {
@@ -183,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded_model.load(\"ols_test.zip\")"
+    "loaded_model.load(my_model.save())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +231,7 @@
        "  <th>Date:</th>             <td>Sat, 22 Jun 2024</td> <th>  Prob (F-statistic):</th> <td>2.34e-34</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>19:44:44</td>     <th>  Log-Likelihood:    </th> <td> -230.17</td>\n",
+       "  <th>Time:</th>                 <td>19:58:47</td>     <th>  Log-Likelihood:    </th> <td> -230.17</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   156</td>      <th>  AIC:               </th> <td>   466.3</td>\n",
@@ -265,7 +283,7 @@
        "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.632   \\\\\n",
        "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     134.0   \\\\\n",
        "\\textbf{Date:}             & Sat, 22 Jun 2024 & \\textbf{  Prob (F-statistic):} &  2.34e-34   \\\\\n",
-       "\\textbf{Time:}             &     19:44:44     & \\textbf{  Log-Likelihood:    } &   -230.17   \\\\\n",
+       "\\textbf{Time:}             &     19:58:47     & \\textbf{  Log-Likelihood:    } &   -230.17   \\\\\n",
        "\\textbf{No. Observations:} &         156      & \\textbf{  AIC:               } &     466.3   \\\\\n",
        "\\textbf{Df Residuals:}     &         153      & \\textbf{  BIC:               } &     475.5   \\\\\n",
        "\\textbf{Df Model:}         &           2      & \\textbf{                     } &             \\\\\n",
@@ -302,7 +320,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.632\n",
        "Method:                 Least Squares   F-statistic:                     134.0\n",
        "Date:                Sat, 22 Jun 2024   Prob (F-statistic):           2.34e-34\n",
-       "Time:                        19:44:44   Log-Likelihood:                -230.17\n",
+       "Time:                        19:58:47   Log-Likelihood:                -230.17\n",
        "No. Observations:                 156   AIC:                             466.3\n",
        "Df Residuals:                     153   BIC:                             475.5\n",
        "Df Model:                           2                                         \n",
@@ -325,7 +343,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 46,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
